--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,6 +14,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+      - name: Set version
+        run: mvn -B versions:set -DnewVersion=${{ github.ref_name }}
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
