--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,6 @@ jobs:
       - name: Set version
         run: mvn -B versions:set -DnewVersion=${{ github.ref_name }}
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode source:jar deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
